--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,35 +1,62 @@
-restore-gradle-cache: &restore-gradle-cache
-  restore_cache:
-    keys:
-      - v1-dependencies-{{ checksum "build.gradle" }}-{{ checksum "gradle.properties" }}
-      - v1-dependencies-
+version: 2.1
 
-save-gradle-cache: &save-gradle-cache
-  save_cache:
-    paths:
-      - ~/.gradle
-    key: v1-dependencies-{{ checksum "build.gradle" }}-{{ checksum "gradle.properties" }}
+commands:
+  install-code-climate:
+    description: Install Code Climate
+    steps:
+      - run:
+          name: Install Code Climate
+          command: |
+            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+            chmod +x ./cc-test-reporter
 
-version: 2
+  test-upload-coverage:
+    description: Test and upload coverage to Code Climate
+    parameters:
+      steps:
+        type: steps
+    steps:
+      - run:
+          name: Code Climate before tests
+          command: ./cc-test-reporter before-build
+      - steps: << parameters.steps >>
+      - run:
+          name: Code Climate after tests
+          command: |
+            ./cc-test-reporter format-coverage build/reports/jacoco/test/jacocoTestReport.xml --input-type jacoco
+            ./cc-test-reporter upload-coverage
+
 jobs:
   build-test:
     working_directory: ~/code
     docker:
       - image: zenika/kotlin:1.3-eap-jdk10-slim
 
+    environment:
+      JACOCO_SOURCE_PATH: src/main/kotlin
+
     steps:
       - checkout
 
-      - <<: *restore-gradle-cache
-      - run: ./gradlew compileTestKotlin
-      - <<: *save-gradle-cache
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "build.gradle" }}-{{ checksum "gradle.properties" }}
+            - v1-dependencies-
 
-      - run:
-          name: Run Tests
-          command: ./gradlew clean test
+      - run: ./gradlew compileTestKotlin
+
+      - save_cache:
+          paths:
+            - ~/.gradle
+          key: v1-dependencies-{{ checksum "build.gradle" }}-{{ checksum "gradle.properties" }}
+
+      - install-code-climate
+      - test-upload-coverage:
+        steps:
+          - run: ./gradlew clean test
 
 workflows:
   version: 2
-  build-test-deploy:
+  build-test:
     jobs:
       - build-test
