--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.11'
+    id 'jacoco'
 }
 
 group 'com.bruno'
@@ -18,6 +19,22 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jacoco {
+        destinationFile = file("${buildDir}/jacoco/test.exec")
+    }
+}
+
+jacoco {
+    // You may modify the Jacoco version here
+    toolVersion = "0.8.2"
+}
+
+jacocoTestReport {
+    // Adjust the output of the test report
+    reports {
+        xml.enabled true
+        csv.enabled false
+    }
 }
 
 compileKotlin {
@@ -26,3 +43,5 @@ compileKotlin {
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
+
+test.finalizedBy(jacocoTestReport)
