--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ commands:
     steps:
       - run: |
           apt-get update
-          apt-get install -yq curl \
+          apt-get install -yq curl
           rm -rf /var/lib/apt/lists/*
 
   install-code-climate:
