--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,6 @@
 version: 2.1
 
 commands:
-  install-curl:
-    description: Install cURL
-    steps:
-      - run: |
-          apt-get update
-          apt-get install -yq curl
-          rm -rf /var/lib/apt/lists/*
-
   install-code-climate:
     description: Install Code Climate
     steps:
@@ -40,7 +32,7 @@ jobs:
   build-test:
     working_directory: ~/code
     docker:
-      - image: zenika/kotlin:1.3-eap-jdk10-slim
+      - image: zenika/kotlin:1.3-eap-jdk10
 
     environment:
       JACOCO_SOURCE_PATH: src/main/kotlin
@@ -60,7 +52,6 @@ jobs:
             - ~/.gradle
           key: v1-dependencies-{{ checksum "build.gradle" }}-{{ checksum "gradle.properties" }}
 
-      - install-curl
       - install-code-climate
       - test-upload-coverage:
           steps:
